Fix layout on mobile

--- a/src/components/Day.css
+++ b/src/components/Day.css
@@ -8,9 +8,8 @@
 
 .image {
   z-index:11;
-  width: 100%;
-  max-height: 200px;
-  height:auto
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .text-overlay {
